--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "iso-8859-2": "^3.0.4"
+    "iso-8859-2": "^3.0.4",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
