--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "iso-8859-2": "^3.0.4",
+    "puppeteer": "^13.4.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
